--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -15,6 +15,10 @@
   background-color: #111 !important;
 }
 
+[data-theme="dark"] .bg-primary {
+  background-color: #000 !important;
+}
+
 [data-theme="dark"] .bg-secondary {
   background-color: #303030 !important;
 }
@@ -97,6 +101,19 @@ select {
   border-color: #404040 !important;
 }
 
-input {
-  font-weight: 500 !important;
+[data-theme="dark"] i {
+  background-color: #252525;
+}
+
+[data-theme="dark"] i:hover {
+  background-color: #101010;
+  color: #ccc;
+}
+
+[data-theme="dark"] #search-area {
+  background-color: #111 !important;
+}
+
+[data-theme="dark"] .backdrop-filter {
+  background: #000000cc !important;
 }
